refactor: auth module

--- a/src/requirements/functional-requirements/IO-functions/index.tex
+++ b/src/requirements/functional-requirements/IO-functions/index.tex
@@ -1,5 +1,7 @@
 \subsubsection{Kopīgās funkcijas ievades / izvades datu prasības}
 Apakšnodaļa ietver informāciju par funkciju parametriem, tai skaitā, nosaukumu, identifikatoru, aprakstu, prasībām un parametru vērtību piemēru, ja tas ir nepieciešams.
 
+\setlength{\parindent}{0pt}
 \input{./src/requirements/functional-requirements/IO-functions/parameter/index.tex}
 \input{./src/requirements/functional-requirements/IO-functions/procedure/index.tex}
+\setlength{\parindent}{1cm}
