--- a/src/requirements/functional-requirements/function-modules.tex
+++ b/src/requirements/functional-requirements/function-modules.tex
@@ -48,8 +48,8 @@ Pārskatamības dēļ DPD tika sadalīta divās daļās (skat \ref{fig:dpd-1.1} 
 	\setcounter{rownum}{0}
 	\multirow{1}{2.1cm}{Reģistrācijas un pieteikšanās modulis} & Lietotāja reģistrācija                                 & \hyperref[tab:mod-func-auth-reg]{\stepcounter{rownum}AMF\therownum}                 & Nereģistrēts lietotājs                        \\ \cline{2-4}
 	                                                           & Apstiprinājuma ziņas atkārtotās izsūtīšanas pieteikums & \hyperref[tab:mod-func-auth-app]{\stepcounter{rownum}AMF\therownum}                 & Nereģistrēts lietotājs, Reģistrēts lietotājs  \\ \cline{2-4}
-	                                                           & Paroles atjaunošanas pieteikums                        & \hyperref[tab:mod-func-auth-pass-restore]{\stepcounter{rownum}AMF\therownum}        & Reģistrēts lietotājs                          \\ \cline{2-4}
-	                                                           & Paroles atjaunošana                                    & \hyperref[tab:]{\stepcounter{rownum}AMF\therownum}                                  & Reģistrēts lietotājs                          \\ \cline{2-4}
+	                                                           & Paroles atjaunošanas pieteikums                        & \hyperref[tab:mod-func-auth-pass-restore-app]{\stepcounter{rownum}AMF\therownum}    & Reģistrēts lietotājs                          \\ \cline{2-4}
+	                                                           & Paroles atjaunošana                                    & \hyperref[tab:mod-func-auth-pass-restore]{\stepcounter{rownum}AMF\therownum}        & Reģistrēts lietotājs                          \\ \cline{2-4}
 	                                                           & Lietotāja pieteikšanās                                 & \hyperref[tab:mod-func-auth-login]{\stepcounter{rownum}AMF\therownum}               & Reģistrēts lietotājs                          \\ \cline{2-4}
 	                                                           & Lietotāja atteikšanās                                  & \hyperref[tab:mod-func-auth-logout]{\stepcounter{rownum}AMF\therownum}              & Reģistrēts lietotājs                          \\ \cline{2-4}
 	                                                           & Lietotāja konta apstiprināšana                         & \hyperref[tab:mod-func-auth-email-confirm]{\stepcounter{rownum}AMF\therownum}       & Reģistrēts lietotājs                          \\ \hline
