--- a/src/requirements/functional-requirements/modules/auth/AMF03.tex
+++ b/src/requirements/functional-requirements/modules/auth/AMF03.tex
@@ -1,49 +1,45 @@
 \moduleFunctionTable
 {Paroles atjaunošanas pieteikums}
-{mod-func-auth-pass-restore}
+{mod-func-auth-pass-restore-app}
 {Paroles atjaunošanas pieteikums}
 {AMF03}
 {
-	Funkcijas mērķis ir ļaut lietotājam atjaunot aizmirsto vai kompromitēto paroli, nodrošinot drošu paroles maiņas procesu, kas ietver unikāla marķiera izveidi, tā nosūtīšanu lietotāja e-pastā un tā pārbaudi.
+	Funkcijas mērķis ir ļaut lietotājam atjaunot aizmirstu vai nedrošu paroli, nodrošinot drošu paroles maiņas procesu, kas ietver unikāla marķiera izveidi, tā nosūtīšanu lietotāja e-pastā un tā verifikāciju.
 }
 {
-	Obligātie parametri:
-	Ievades dati tiek saņemti no ievades lauciņiem, pieejami autentificētiem un neautentificētiem lietotājiem.
-	\begin{enumerate}
-		\item E-pasta adrese - simbolu virkne, kas atbilst ``RFC 2822: Interneta ziņu formāts'' standarta prasībām.
-	\end{enumerate}
-}
-{
-	\begin{enumerate}
-		\item Pārbauda, vai e-pasta adrese eksistē datubāzē.
-		      Ja nē, parāda 1. paziņojumu.
-		\item Ģenerē unikālu marķieri paroles atjaunošanai.
-		\item Ieraksta jaunu marķieri lietotāja ierakstam, pievienojot tam derīguma laiku.
-		\item Izveido saiti paroles atjaunošanai, iekļaujot marķieri.
-		\item Nosūta saiti uz lietotāja e-pasta adresi.
-		\item Lietotājs atver saiti.
-		\item Pārbauda, vai saitē iekļautais marķieris ir derīgs un nav novecojis.
-		      Ja nederīgs vai novecojis, parāda 2. paziņojumu.
-		\item Atver paroles atjaunošanas veidlapu.
-		\item Lietotājs ievada jauno paroli.
-		\item Pārbauda, vai jaunā parole atbilst drošības prasībām.
-		      Ja nē, parāda 3. paziņojumu.
-		\item Paroles šifrēšanas procesā tiek izmantota jaucējfunkcija ar ``sāls pievienošanu.''
-		\item Saglabā jauno paroli datubāzē un parāda 4. paziņojumu.
-		\item Atzīmē veco marķieri kā izmantotu.
-	\end{enumerate}
-}
-{
-	\begin{enumerate}
-		\item Paroles atjaunošanas stāvoklis - kods ar noteiktu stāvokli.
-	\end{enumerate}
+	Ievaddati tiek iegūti no veidlapas.
 
+	Obligātie parametri:
+	\begin{enumerate}
+		\item E-pasta adrese - simbolu virkne, kas atbilst “RFC 2822: Interneta ziņu formāts” standarta prasībām.
+	\end{enumerate}
 }
 {
 	\begin{enumerate}
-		\item E-pasta adrese nav reģistrēta!
-		\item Saitei ir beidzies derīguma termiņš!
-		\item Parolei ir jāsatur: [neizpildīto paroles prasību saraksts]!
-		\item Paroles atjaunošana veiksmīga.
+		\item Pārbauda, vai e-pasta adrese eksistē datubāzē, meklējot lietotāju ar sakrītošu e-pasta adresi;
+		      \begin{enumerate}
+			      \item Ja tāds lietotājs jau eksistē, parāda 1. paziņojumu. Beidz apstrādi.
+		      \end{enumerate}
+		\item Ģenerē unikālu marķieri paroles atjaunošanai, pārbaudot unikalitāti, meklējot lietotāju ar sakrītošu un derīgu marķieri;
+		      \begin{enumerate}
+			      \item Ja tāds lietotājs eksistē, atkārto ģenerāciju līdz iegūtais marķieris ir unikāls.
+		      \end{enumerate}
+		\item Ieraksta jaunu marķieri lietotāja, kas atjauno paroli, ierakstam, pievienojot tam noteikto derīguma laiku;
+		\item Izveido saiti paroles atjaunošanai, iekļaujot marķieri;
+		\item Nosūta saiti uz lietotāja e-pasta adresi.
+	\end{enumerate}
+}
+{
+	Izvades datu mērķis ir lietotāja informēšana par paroles atjaunošanas pieteikuma ziņas izsūtīšanas stāvokli. Lietotāja saskarnē parādās 4. paziņojums.
+	\begin{enumerate}
+		Paroles atjaunošanas pieteikuma stāvoklis - kods ar noteiktu stāvokli.
+	\end{enumerate}
+}
+{
+	\begin{enumerate}
+		\item E-pasta adrese jau ir reģistrēta!;
+		\item Saitei ir beidzies derīguma termiņš!;
+		\item Parolei ir jāsatur: [neizpildīto paroles prasību saraksts]!;
+		\item Apstiprinājuma ziņa ir izsūtīta! Apstipriniet lietotāja kontu ar saiti, kas tiks izsūtīta tuvākā laikā e-pastā.
 	\end{enumerate}
 }
