--- a/src/requirements/functional-requirements/modules/auth/AMF06.tex
+++ b/src/requirements/functional-requirements/modules/auth/AMF06.tex
@@ -4,28 +4,30 @@
 {Lietotāja atteikšanās}
 {AMF06}
 {
-	Funkcijas mērķis ir beigt lietotāja pārlūkprogrammas asociāciju ar noteiktu lietotāju kontu.
+	Funkcijas mērķis ir pārtraukt lietotāja pārlūkprogrammas sasaisti ar noteiktu lietotāju kontu.
 }
 {
-	Ievades dati tiek saņemti no lietotāja pārlūkprogrammas.
+	Ievades dati tiek saņemti no lietotāja - klikšķis uz atteikšanās pogu.
 
 	Obligātie parametri:
 	\begin{enumerate}
 		\item Lietotāja sesijas marķieris - 16 simbolu gara virkne, kas tiek glabāta lietotāja pārlūkprogrammā.
 	\end{enumerate}
-
 }
 {
 	\begin{enumerate}
-		\item No lietotāja pārlūkprogrammas tiek iegūts sesijas marķieris.
-		\item Ja sesijas marķieris eksistē, tas tiek izdzēsts.
-		      Lietotājs tiek pāradresēts uz mājaslapas sākuma lapu.
+		\item No lietotāja pārlūkgrammas tiek iegūts sesijas marķieris;
+		\item Ja sesijas marķieris eksistē, tas tiek izdzēsts. Lietotājs tiek pāradresēts uz mājaslapas sākuma lapu.
+		      \begin{enumerate}
+			      \item Ja marķiera izdzēšana nav veiksmīga. Parāda 1. paziņojumu.
+		      \end{enumerate}
 	\end{enumerate}
 }
 {
-	Izvades datu mērķis ir noteikt, vai lietotājs tiks pāradresēts un kurā lapā lietotājs tiks pāradresēts.
+	Izvades datu funkcijai nav. Lietotājs tiek pāradresēts mājaslapas sākuma lapā.
+}
+{
 	\begin{enumerate}
-		\item Atteikšanās apstiprinājuma stāvoklis - kods ar noteiktu stāvokli.
+		\item Atteikšanās neizdevās! Mēģiniet pārlādēt lapu vai mēģiniet vēlāk!
 	\end{enumerate}
 }
-{}
