--- a/src/requirements/functional-requirements/modules/index.tex
+++ b/src/requirements/functional-requirements/modules/index.tex
@@ -1,3 +1,4 @@
+\setlength{\parindent}{0pt}
 \input{./src/requirements/functional-requirements/modules/auth/index.tex}
 \input{./src/requirements/functional-requirements/modules/user/index.tex}
 \input{./src/requirements/functional-requirements/modules/premium-user/index.tex}
@@ -7,3 +8,4 @@
 \input{./src/requirements/functional-requirements/modules/game-progress/index.tex}
 \input{./src/requirements/functional-requirements/modules/game-role/index.tex}
 \input{./src/requirements/functional-requirements/modules/game-setup/index.tex}
+\setlength{\parindent}{1cm}
