--- a/src/requirements/functional-requirements/modules/user/LAMF01.tex
+++ b/src/requirements/functional-requirements/modules/user/LAMF01.tex
@@ -4,45 +4,51 @@
 {Lietotāju profilu pārskats}
 {LAMF01}
 {
-	Funkcijas mērķis ir lietotājiem rādīt citu lietotāju profilu publisku informāciju (profilu).
-	Funkcijas ietvaros var tikt veikta neobligāta meklēšana pēc noteiktiem lietotāja profilu atribūtiem.
+	Funkcijas mērķis ir lietotājiem sniegt citu lietotāju profilu publisku informāciju. Funkcijas ietvaros var tikt veikta neobligāta meklēšana pēc noteiktiem lietotāja profilu atribūtiem.
 }
 {
-	Ievades datus iegūst no veicamās darbības.
+	Ievades datus iegūst no lietotāja neobligāti uzstādītiem filtriem, kārtošanas izvēles un lappuses numura un meklēšanas uzvednes.
+	Parametri atbilst attiecīgām saitēm un ievades laukam lietotāja saskarnē un izvēlnēm pārskata lapās.
+	Parametru vērtības tiek iegūtas no vietrādes parametriem.
 
 	Neobligātie parametri:
 	\begin{enumerate}
-		\item Meklēšanas uzvedne - simbolu virkne ar garumu līdz 50 simboliem bez atļauto simbolu ierobežojumiem.
+		\item Lappuses numurs - vesels pozitīvs skaitlis;
+		\item Meklēšanas uzvedne - simbolu virkne ar garumu līdz 50 simboliem bez atļauto simbolu ierobežojumiem;
+		\item Kārtošanas vārdnīcu saraksts, kas sastāv no vārdnīcām: datu bāzes atribūta nosaukums (atbilst \hyperref[tab:IIDP12]{IIDP12}) - kārtošanas kods (atbilst \hyperref[tab:IIDP11]{IIDP11});
+		\item Filtru vārdnīcu saraksts, kas sastāv no vārdnīcām: datu bāzes atribūta nosaukums (atbilst \hyperref[tab:IIDP12]{IIDP12}) - filtra vērtība (vesels skaitlis) un filtra veids (0 - Būla mainīgā filtrs, 1 - entitātes identifikatora filtrs).
 	\end{enumerate}
 }
 {
 	\begin{enumerate}
-		\item Sagatavo datubāzes pieprasījumu no lietotāju tabulas.
-		\item Ja meklēšanas uzvedne nav tukša simbolu virkne, tad pieprasījumam pievieno meklēšanas nosacījumu meklēšanai pēc pilna vārda, segvārda un biogrāfijas.
-		\item Pieprasa ierakstu saskaitīšanu, izmantojot sagatavoto pieprasījumu.
-		      Ja rezultātu skaits ir $0$, tad parāda 1. paziņojumu.
-		\item Aprēķina lappušu skaitu ar formulu: $L = ceil(Q / Q_l)$, $Q$ - rezultātu skaits, $Q_l$ - ierakstu skaits vienā lappusē.
-		\item Ja ievaddatos nav lappuses numurs vai tā pārsniedz aprēķināto lappušu skaitu, tad turpmāk lappuses numurs būs 1.
-		\item Aprēķina ierakstu nobīdi ar formulu: $O = (N - 1) * Q_l$, kur $O$ - nobīde; $N$ - lappuses numurs, $Q_l$ - ierakstu skaits vienā lappusē.
-		\item Pievieno pieprasījumam nobīdi pēc aprēķinātās lappuses.
-		\item Veic sagatavoto pieprasījumu, iegūstot abonementa segvārdu, izveidošanas laiku (lietotāja pievienošanās laiku), attēla datnes adreses.
-		      Ja pieprasījums neizdodas, parāda 2. paziņojumu.
-		\item Ja attēls datnes adrese neeksistē, tad iegūst noklusētā attēla datnes adresi.
+		\item Sāk gatavot datubāzes pieprasījumu no lietotāju tabulas;
+		\item Sagatavo pārskata pieprasījumu un iegūst lappuses numuru un kopējo lappušu skaitu, izmantojot \hyperref[tab:KPR07]{KPR07} ar lappuses numuru, meklēšanas uzvedni, kārtošanas vārdnīcu sarakstu, filtru vārdnīcu sarakstu, šos parametrus iesniedzot, ja tie ir iesniegti funkcijā;
+		      \begin{enumerate}
+			      \item Ja lappušu skaits ir 0, tad parāda 1. paziņojumu. Beidz apstrādi.
+		      \end{enumerate}
+		\item Veic sagatavoto pieprasījumu, iegūstot lietotāja segvārdu, lietotāja konta izveidošanas laiku (lietotāja pievienošanās laiku), lietotāja attēla datnes adreses;
+		      \begin{enumerate}
+			      \item Ja pieprasījums neizdodas, parāda 2. paziņojumu. Beidz apstrādi.
+		      \end{enumerate}
+		\item Katram ierakstam no rezultāta, iegūst sameklē attēla datnes adresi no attēlu tabulas pēc attēla identifikatora.
+		      \begin{enumerate}
+			      \item Ja attēla datnes adrese neeksistē ierakstam, tad iegūst noklusētā attēla datnes adresi un pamaina ieraksta datnes adresi izvades datos uz noklusētā datnes attēla adresi.
+		      \end{enumerate}
 	\end{enumerate}
 }
 {
-	Izvades datu mērķis ir parādīt pārskata, ņemot meklēšanas uzvedni, ja tā tukša.
-
-	Izvades dati:
+	Izvades datu mērķis ir parādīt rezultāta pārskatu lietotāja saskarnē.
 	\begin{enumerate}
-		\item Pārskata ieraksta dati: vairāki ieraksti, kas sastāv no segvārda, lietotāja konta izveidošanas laika (lietotāja pievienošanās laiku).
-		\item Lapu skaits - pozitīvs skaitlis.
-		\item Tekošā lappuse - pozitīvs skaitlis, kas ir mazāks vai vienāds par lapu skaitu.
+		\item Pārskata ierakstu saraksts: ierakstu saraksts, kas sastāv no: lietotāja identifikatora, segvārda, lietotāja konta izveidošanas laika (lietotāja pievienošanās laiku);
+		\item Kopējais lapu skaits - vesels pozitīvs skaitlis;
+		\item Tekošā lappuse - vesels pozitīvs skaitlis, kas ir mazāks vai vienāds par lapu skaitu;
+		\item Kārtošanas vārdnīcu saraksts, kas sastāv no vārdnīcām: datu bāzes atribūta nosaukums (atbilst \hyperref[tab:IIDP12]{IIDP12}) - kārtošanas kods (atbilst \hyperref[tab:IIDP11]{IIDP11});
+		\item Filtru vārdnīcu saraksts, kas sastāv no vārdnīcām: datu bāzes atribūta nosaukums (atbilst \hyperref[tab:IIDP12]{IIDP12}) - filtra vērtība (vesels skaitlis) un filtra veids ($0$ - Būla mainīgā filtrs, $1$ - entitātes identifikatora filtrs).
 	\end{enumerate}
 }
 {
 	\begin{enumerate}
-		\item Pēc jūsu meklēšanas uzvednes netika atrasts neviens lietotājs!
-		\item Notika sistēmas iekšējā kļūda! Mēģiniet vēlreiz vēlāk!
+		\item Netika atrasts neviens lietotājs!;
+		\item Sistēmas iekšējā kļūda! Mēģiniet vēlreiz vēlāk!
 	\end{enumerate}
 }
