feat(tables): add table rerefences

--- a/src/design/entities/index.tex
+++ b/src/design/entities/index.tex
@@ -1,6 +1,21 @@
 \subsection{Datu bāzes tabulu apraksts}
 Datubāzes tabulu lauku, datu tipi, lauka atribūti - obligātums, noklusētās vērtības, primārā atslēga,
-unikalitāte - ir aprakstītas atsevišķās tabulās (skat. x.1, x.2, … , x.n tab. % TODO: add all table references).
+unikalitāte - ir aprakstītas atsevišķās tabulās (skat.
+\ref{tab:entity-role-action} tab.,
+\ref{tab:entity-role-disadvantage} tab.,
+\ref{tab:entity-image} tab.,
+\ref{tab:entity-subscription-price} tab.,
+\ref{tab:entity-password-recovery} tab.,
+\ref{tab:entity-email-confirmation} tab.,
+\ref{tab:entity-game-role} tab.,
+\ref{tab:entity-account-status} tab.,
+\ref{tab:entity-room-status} tab.,
+\ref{tab:entity-user} tab.,
+\ref{tab:entity-game-setup} tab.,
+\ref{tab:entity-player} tab.,
+\ref{tab:entity-paid-subscription} tab.,
+\ref{tab:entity-message} tab.)
+
 Visām tabulām, \texttt{VARCHAR} un \texttt{TEXT} laukiem tiek lietots UTF8 kodējums.
 
 \input{./src/design/entities/role-action.tex}
