refactor: db sections

--- a/src/design/entities/index.tex
+++ b/src/design/entities/index.tex
@@ -1,4 +1,4 @@
-\subsection{Datu bāzes tabulu apraksts}
+\subsubsection{Datu bāzes tabulu apraksts}
 Datubāzes tabulu lauku, datu tipi, lauka atribūti - obligātums, noklusētās vērtības, primārā atslēga,
 unikalitāte - ir aprakstītas atsevišķās tabulās (skat.
 \ref{tab:entity-role-action} tab.,
