--- a/src/design/logical-description.tex
+++ b/src/design/logical-description.tex
@@ -1,4 +1,4 @@
-\subsection{Datu bāzes loģiskais ER modelis}
+\subsubsection{Datu bāzes loģiskais ER modelis}
 \begin{figure}[htbp]
 	\centering
 	\includegraphics[width=\linewidth]{./src/img/LogiskaisERDModelis.png}
