--- a/src/abstract.tex
+++ b/src/abstract.tex
@@ -16,7 +16,7 @@ pielietojot abonementa paveida maksājumu sistēmu.
 Mafijas spēle, sistēmas prasības, specifikācijas dokuments, programmatūras
 uzlabošana, lomu spēle, vienkāršota spēlēšana, organizatoriski risinājumi,
 programmatūras prasību specifikācija, lietotāju veidots saturs, abonements,
-maksas lietotājs, maskājumu apstrādātāja lietojumprogrammas saskarni (API).
+maksas lietotājs, maksājumu apstrādātāja lietojumprogrammas saskarni (API).
 
 \section*{Abstract}
 The social role-playing game ``Mafia'' is widely known. It is available in
