--- a/src/description/requirements.tex
+++ b/src/description/requirements.tex
@@ -5,7 +5,7 @@ Sistēmā tiks realizētas sekojošās darījumprasības:
 	\item Lietotāju reģistrācija, autentifikācija;
 	\item Lietotāju un to privilēģiju pārvalde;
 	\item Lietotāju konta apstiprināšana, izmantojot e-pastu;
-	\item Lietotāju profilu personalizācija un kontu rediģešana;
+	\item Lietotāju profilu personalizācija un kontu rediģēšana;
 	\item Lietotāju stāvokļa virtuālajās telpās uzturēšana un izmaiņa;
 	\item Lietotāju informēšana, izmantojot paziņojumu sistēmu;
 	\item Sinhronizēta spēles stāvokļa atjaunināšana;
