--- a/src/description/users.tex
+++ b/src/description/users.tex
@@ -4,7 +4,7 @@ Neautentificēts lietotājs (viesis), i.e., viesis ir jebkurš lietotājs, kas n
 pieteicies vai reģistrējies sistēmā. Šiem lietotājiem ir pieejamas funkcijas,
 lai reģistrētos vai pieteiktos sistēmā;
 
-Kad lietotājs ir pieteicies un ir autentificēts, tam ir pieejamas registrēta
+Kad lietotājs ir pieteicies un ir autentificēts, tam ir pieejamas reģistrēta
 lietotāja grupas privilēģijas, precīzāk, darbības saistītas ar spēli, profilu
 un konta pārvaldi. Tā būs vislielākā grupa pēc lietotāju skaita. Maksas
 lietotājiem, precīzāk, reģistrētiem lietotājiem, kuriem piesaistīts aktīvs
@@ -18,8 +18,7 @@ informācijas izmaiņa, lomu uzstādījumu un spēles konfigurācijas rediģēš
 Lietotājs ``Sistēma'' izpilda noteiktas, ar spēles gaitu saistītas darbības, kas
 notiek automātiski un kas nav tiešā veidā citu lietotāju grupu kompetencēs.
 
-Ar lietotājiem saistītās datu plūsmas ir attēlotas sistēmas nultā līmeņa DPD
-(\ref{fig:dpd-0}).
+Ar lietotājiem saistītās datu plūsmas ir attēlotas sistēmas nultā līmeņa DPD (skat. \ref{fig:dpd-0} att.).
 
 
 \begin{figure}[htbp]
