--- a/src/introduction/scope.tex
+++ b/src/introduction/scope.tex
@@ -19,12 +19,12 @@ informāciju par spēles aktuālo stāvokli, precīzāk, fāzi (diena / nakts), 
 ilgumu, palikušo spēlētāju skaitu un citiem spēli raksturojošiem faktoriem.
 
 Spēlētāja darbību klāsts ir atkarīgas no iedalītās lomas un aktuālā spēles
-stāvokļa. Spēles organizātoram (maksas lietotājam) ir iespēja izveidot virtuālu
+stāvokļa. Spēles organizatoram (maksas lietotājam) ir iespēja izveidot virtuālu
 telpu un pielāgot tās iestatījumus, lai organizētu spēli vai mainītu to
 konfigurāciju, kas ietver noteiktās lomas, kā arī mainīt un veidot jaunas
 lomas.
 
-Katram spēlētājam tiek nodrošināta sihnronizēta informācija par spēles tekošo
+Katram spēlētājam tiek nodrošināta sinhronizēta informācija par spēles tekošo
 stāvokli un pieejamajām darbībām, tai skaitā, paziņojumi par spēles stāvokļa
 izmaiņām.
 
@@ -32,4 +32,3 @@ izmaiņām.
 ietvert gan atvērtas, gan privātas virtuālās spēļu telpas, statistikas
 pārskats, kurā pieejama statistika par jau izspēlētajām spēlēm, un lietotāja
 profils, kurā var rediģēt lietotāju raksturojošo informāciju.
-
