--- a/src/legends.tex
+++ b/src/legends.tex
@@ -1,6 +1,6 @@
 \section*{Apzīmējumu saraksts}
 \addcontentsline{toc}{section}{Apzīmējumu saraksts}
-
+\setlength{\parindent}{0pt}
 \textbf{API} - lietojumprogrammu saskarne (angl. Application Program Interface);
 
 \textbf{Abonements} - uz noteiktu laiku par maksu piešķirtās papildus lietotāja iespējas;
@@ -35,7 +35,7 @@
 
 \textbf{PPS} - programmatūras prasību specifikācija;
 
-\textbf{SQL injekcija} - drošības apdraudējums, kas rodas, kad uzbrucējs var ievietot vai "injicēt" SQL komandas datu bāzes vaicājumā, tādējādi mainot tā darbību vai izgūstot konfidenciālu informāciju;
+\textbf{SQL injekcija} - drošības apdraudējums, kas rodas, kad uzbrucējs var ievietot vai ``injicēt'' SQL komandas datu bāzes vaicājumā, tādējādi mainot tā darbību vai izgūstot konfidenciālu informāciju;
 
 \textbf{Sanitizēšana} - Datu vai ievades apstrāde, lai noņemtu vai neitralizētu potenciāli kaitīgus vai nevēlamus elementus;
 
@@ -45,10 +45,14 @@
 
 \textbf{Spēlētājs} - lietotāja ieraksts vienas virtuālās istabas kontekstā;
 
-\textbf{Sāls pievienošana} - Drošības metode, kurā pirms paroles jaucējfunkcijas izmantošanas tai tiek pievienots nejaušs simbolu virknes fragments, lai padarītu paroles atšifrēšanu sarežģitāku;
+\textbf{Sāls pievienošana} - Drošības metode, kurā pirms paroles jaucējfunkcijas izmantošanas tai tiek pievienots nejaušs simbolu virknes fragments, lai padarītu paroles atšifrēšanu sarežģītāku;
 
 \textbf{UTF8} - Vienota teksta formāta kodējums 8-bitu garumā (angl. Unicode Transformation Format - 8 bit) - populārs teksta kodējums, kas atbalsta visu pasaules valodu rakstzīmes;
 
 \textbf{WCAG - Tīmekļa satura pieejamības vadlīnijas (angl. Web Content Accessibility Guidelines)} - starptautiski standarti, kas nosaka, kā padarīt tīmekļa saturu pieejamāku cilvēkiem ar dažādām invaliditātēm;
 
 \textbf{XSS} - Starpvietņu skriptēšana (angl. Cross-Site Scripting) - drošības uzbrukuma veids, kurā uzbrucēji ievieto ļaunprātīgus skriptus tīmekļa lapā, kas tiek izpildīti citu lietotāju pārlūkos.
+
+
+
+\setlength{\parindent}{1cm} % Leave as last line
