--- a/src/requirements/conceptual-description.tex
+++ b/src/requirements/conceptual-description.tex
@@ -13,8 +13,8 @@ Konceptuālajā modelī redzamās entītātes no konceptuālā ER modeļa (\ref{
 	\item Spēlētājs - vienai virtuālai spēles istabai piederošais spēlētājs.
 	      Tam piemīt viena spēles loma un var būt vairākas spēles gaitā veiktās
 	      lomai atbilstošās darbības;
-	\item Īsziņa - virtuālās istabas terzēšanā izveidotā īsziņa, kas tiek saistīta ar vienu spēlētāju un var atbildēt uz citu īsziņu izveides laikā;
-	\item Spēles notikums - spēlē notiekošie notikumi, kā spēles fāzes maiņa, izbalsošanas, slepkavības u.c.
+	\item Īsziņa - virtuālās istabas tērzēšanā izveidotā īsziņa, kas tiek saistīta ar vienu spēlētāju un var atbildēt uz citu īsziņu izveides laikā;
+	\item Spēles notikums - spēles fāzes maiņa, spēlētāju izslēgšana, piemēram, izbalsošana vai slepkavība, un citi.
 	\item Spēles virtuāla istaba - vienas gaidāmas, tekošās vai pagātnē notikušas spēles, kam piemīt spēlētāji, spēles uzstādījumi, spēles notikumi, izveidotājs (lietotājs maskas lietotāja grupā);
 \end{itemize}
 
