--- a/src/requirements/functional-requirements/function-modules.tex
+++ b/src/requirements/functional-requirements/function-modules.tex
@@ -7,7 +7,7 @@ Maksas lietotājs un administrators tiek norādīts pie lietotāja grupas tikai 
 Tiek pieņemts, ka lietotāja autentifikācija ir izpildīta, izmantojot funkcijas, kur apstrāde ir neatkarīga no lietotāju grupas.
 
 2.līmeņa DPD parāda izvērstāku 1. līmeņa (jeb konteksta) DPD ar sistēmas sadalījumu pa moduļiem.
-Pārskatamības dēļ DPD tika sadalīta divās daļās (skat \ref{fig:dpd-1.1} att. un \ref{fig:dpd-1.2} att.).
+Pārskatāmības dēļ DPD tika sadalīta divās daļās (skat \ref{fig:dpd-1.1} att. un \ref{fig:dpd-1.2} att.).
 
 
 \begin{figure}[htbp]
