--- a/src/design/entities/password-recovery.tex
+++ b/src/design/entities/password-recovery.tex
@@ -1,4 +1,4 @@
 \begin{entityTable}{ParolesAtjaunosana}{entity-password-recovery}
-	\entityTableRow{markieris}{varchar(255)}{unique, not null}{Ģenerēts marķieris epasta lietotājaparoles atjaunošanai}
+	\entityTableRow{markieris}{varchar(255)}{unique, not null}{Ģenerēts marķieris e-pasta lietotāja paroles atjaunošanai}
 	\entityTableRow{deriguma\_termins}{timestamp}{not null}{Laiks, līdz kurams paroles atjaunošana ir iespējama}
 \end{entityTable}
