--- a/src/design/entities/email-confirmation.tex
+++ b/src/design/entities/email-confirmation.tex
@@ -1,4 +1,4 @@
 \begin{entityTable}{EpastaApstiprinajums}{entity-email-confirmation}
-	\entityTableRow{markieris}{varchar(255)}{unique, not null}{Ģenerēts marķieris epasta lietotāja apstiprināšanai}
-	\entityTableRow{deriguma\_termins}{timestamp}{not null}{Laiks, līdz kuram e-pasta apstiprināša ir iespējama}
+	\entityTableRow{markieris}{varchar(255)}{unique, not null}{Ģenerēts marķieris e-pasta lietotāja apstiprināšanai}
+	\entityTableRow{deriguma\_termins}{timestamp}{not null}{Laiks, līdz kuram e-pasta apstiprināšana ir iespējama}
 \end{entityTable}
