--- a/src/requirements/nonfunctional-requirements/constraints.tex
+++ b/src/requirements/nonfunctional-requirements/constraints.tex
@@ -1,30 +1,51 @@
 \subsubsection{Projekta ierobežojumi}
+
+\paragraph{Intelektuālā īpašuma tiesības}
+
+    Projektā jāievēro autortiesību un preču zīmju likumi. Lai izvairītos no
+    juridiskām problēmām, ir jāsaņem atbilstošas atļaujas un licences par spēļu
+    aktīviem (assets).
+
 \paragraph{Atbilstība standartiem}
-\textit{(some text, but don't know what exactly)}
 
-\subparagraph{Datu privātuma atbilstība}
-Platformai ir jāatbilst datu aizsardzības noteikumiem, tostarp vispārīgajai datu aizsardzības regulai (General Data Protection Regulation - GDPR).
-Ir būtiski noteikt visaptverošu datu apstrādes praksi, lai nodrošinātu lietotāju datu konfidencialitāti un drošību.
+    Šajā sadaļā ir izklāstīti galvenie standarti, kā prasībām sistēmai ir
+    jāatbilst, lai nodrošinātu robustumu, uzticamību un lietotāju tiesību un
+    cerību ievērošanu.
 
-\subparagraph{Pieejamības standarti}
-Lai nodrošinātu vienlīdzīgu piekļuvi visiem lietotājiem, platformai jāatbilst tīmekļa satura pieejamības vadlīnijām (Web Content Accessibility Guidelines - WCAG) attiecībā uz tīmekļa pieejamību.
-Jāapsver lokalizācijas un iekļaušanas iespējas, lai pielāgotos dažādām auditorijām.
+    \subparagraph{Datu privātuma atbilstība}
 
-\subparagraph{Intelektuālā īpašuma tiesības}
-Projektā jāievēro autortiesību un preču zīmju likumi.
-Lai izvairītos no juridiskām problēmām, ir jāsaņem atbilstošas atļaujas un licences par spēļu aktīviem \textit{(assets)}.
+        Sistēmai ir jāatbilst datu aizsardzības noteikumiem, tostarp
+        vispārīgajai datu aizsardzības regulai (GDPR - General Data Protection
+        Regulation). Ir būtiski noteikt visaptverošu datu apstrādes praksi, lai
+        nodrošinātu lietotāju datu konfidencialitāti un drošību.
 
-\subparagraph{Drošības standarti}
-Jāievieš stingri drošības pasākumi, ievērojot nozares paraugpraksi, piemēram, atvērto lietojumprogrammu drošības projektu visā pasaulē (Open Worldwide Application Security Project - OWASP), lai pasargātu no bieži sastopamām tīmekļa ievainojamībām.
-Datu aizsardzībai jāizmanto šifrēšanas protokoli.
+    \subparagraph{Pieejamības standarti}
+
+        Lai nodrošinātu vienlīdzīgu piekļuvi visiem lietotājiem, sistēmai
+        jāatbilst tīmekļa satura pieejamības vadlīnijām (WCAG - Web Content
+        Accessibility Guidelines) attiecībā uz tīmekļa pieejamību. Jāapsver
+        lokalizācijas un iekļaušanas iespējas, lai pielāgotos dažādām
+        auditorijām.
+
+    \subparagraph{Drošības standarti}
+
+        Jāievieš stingri drošības pasākumi, ievērojot nozares paraugpraksi,
+        piemēram, atvērto lietojumprogrammu drošības projektu visā pasaulē
+        (OWASP - Open Worldwide Application Security Project), lai pasargātu no
+        bieži sastopamām tīmekļa ievainojamībām. Datu aizsardzībai jāizmanto
+        šifrēšanas protokoli.
 
 \paragraph{Aparatūras ierobežojumi}
-\textit{(some text, but don't know what exactly)}
 
-\subparagraph{Atbalstītās ierīces}
-Platformai jābūt saderīgai ar dažādām ierīcēm, tostarp galddatoriem, klēpjdatoriem, viedtālruņiem un planšetdatoriem.
-Lai nodrošinātu netraucētu spēlēšanu, jānosaka minimālās aparatūras prasības.
+    \subparagraph{Atbalstītās ierīces}
 
-\subparagraph{Serveris un mitināšana}
+        Sistēmai jābūt saderīgai ar dažādām ierīcēm, tostarp galddatoriem,
+        klēpjdatoriem, viedtālruņiem un planšetdatoriem. Lai nodrošinātu
+        netraucētu spēlēšanu, jānosaka minimālās aparatūras prasības.
 
-\subparagraph{Tīkla veiktspēja}
+    \subparagraph{Serveris un mitināšana}
+
+        Uz servera, kurāuz kā tiek mitināta sistēma, jābūt pieejamam docker
+        programmatūras atbalstam, lai standartizētu programmatūras izvietošanu
+        ražošanas vidē un ražošanas vides simulēšanai un atvieglotai
+        tehnoloģiju versiju sinhronizācijai ar izstrādes vidi. 
