--- a/src/requirements/nonfunctional-requirements/performance-requirements.tex
+++ b/src/requirements/nonfunctional-requirements/performance-requirements.tex
@@ -1,18 +1,20 @@
 \subsubsection{Veiktspējas prasības}
 
 \paragraph{Statiskā veiktspēja}
-    Uz statisko veiktspēju ir sekojošas prasības:
 
-        \begin{enumerate}
-            \item Normāla sistēmas darbība vismaz 500 lietotājiem paralēli.
-            \item Normāla sistēmas darbība ar vismaz 40 paralēlām spēles instancēm.
-        \end{enumerate}
+Uz statisko veiktspēju ir sekojošas prasības:
+
+\begin{itemize}
+	\item Normāla sistēmas darbība vismaz 500 lietotājiem paralēli.
+	\item Normāla sistēmas darbība ar vismaz 40 paralēlām spēles instancēm.
+\end{itemize}
+
 \paragraph{Dinamiskā veiktspēja}
-    Uz dinamisko veiktspēju ir sekojošas prasības:
 
-        \begin{enumerate}
-            \item Sistēmai ir jānodrošina, ka 95\% no dienā veiktajiem pieprasījumiem tiek izpildīti uz servera ne ilgāk kā 5 sekundēs.
-            \item Darbībām spēles procesā jāizpildās ne ilgāk kā 3 sekundēs.
-            \item Darbspējas laiks ir vismaz 99,4\% no visa laika.
-        \end{enumerate}
+Uz dinamisko veiktspēju ir sekojošas prasības:
 
+\begin{itemize}
+	\item Sistēmai ir jānodrošina, ka 95\% no dienā veiktajiem pieprasījumiem tiek izpildīti uz servera ne ilgāk kā 5 sekundēs.
+	\item Darbībām spēles procesā jāizpildās ne ilgāk kā 3 sekundēs.
+	\item Darbspējas laiks ir vismaz 99,4\% no visa laika.
+\end{itemize}
