style(table background): set table background to none

--- a/src/utils/function-table.tex
+++ b/src/utils/function-table.tex
@@ -4,7 +4,7 @@
 	skipbelow=0pt,
 	skipabove=0pt,
 	everyline=true,
-	backgroundcolor=gray!2,
+	backgroundcolor=none,
 	linecolor=black,
 	fontcolor=black,
 	roundcorner=0pt,
